--- a/packages/ningali/lib/views/runner/nodeViewer.ejs
+++ b/packages/ningali/lib/views/runner/nodeViewer.ejs
@@ -88,7 +88,7 @@
             id="<%= item.rename %>"
             role="tabpanel"
           >
-            <pre><code class="language-javascript"><%= item.content %></code>
+            <pre style="height: calc(100vh - 43px);"><code class="language-javascript"><%= item.content %></code>
           </pre>
           </div>
           <% }); %>
